--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Envoi vers Discord</title>
+  <title>Certification de compte modérateur discord</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -81,4 +81,5 @@
     });
   </script>
 </body>
+
 </html>
